[package]
name = "hiivelabs-zertz-mcts"
version = "0.5.2"
edition = "2021"

[lib]
name = "hiivelabs_zertz_mcts"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
numpy = "0.26"
ndarray = "0.16"
rand = "0.9"
dashmap = "6.1"
rayon = "1.11"
rand_pcg = "0.9"
smallvec = "1.13"

[features]
default = []
metrics = []
skip_forced_moves = []  # Enable auto-play through forced sequences (experimental)

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
