[package]
name = "hiivelabs-mcts"
version = "0.6.0"
edition = "2021"

[lib]
name = "hiivelabs_mcts"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }
numpy = "0.27"
ndarray = "0.16"
rand = "0.9"
dashmap = "6.1"
rayon = "1.11"
rand_pcg = "0.9"
smallvec = "1.15"

[features]
default = []
metrics = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
